--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ nav p {
   display: flex;
   align-items: center;
   gap: 1rem;
-  font-size: 1rem;
+  font-size: .8rem;
   letter-spacing: 1px;
 }
 
